Surayyo new3 task

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         <a target="_blank" href="https://t.me/+DFH9yghS3k5iOWMy"
           ><i class="fa-brands fa-telegram"></i
         ></a>
-        <a href=""><i class="fa-brands fa-instagram"></i></a>
-        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a target="_blank" href="https://github.com/Surayyo14"><i class="fa-brands fa-github"></i></a>
       </div>
     
     </div>
